# demo-0.example-0

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  dependencies  dependencies.fix  manage.dependency  sonar-project.properties
cmake/: DetermineVersion.cmake  Proj0LibsConfig.cmake.in
dep0/: CMakeLists.txt  dep0.cpp
proj0/: CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  main.cpp
